--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -20,7 +20,7 @@
                 </li>
                 <li {% if 'listings' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3"
                     {% endif %}>
-                    <a class="nav-link" href="listings.html">Featured Listings</a>
+                    <a class="nav-link" href="{% url 'listings' %}">Featured Listings</a>
                 </li>
             </ul>
 
