L8.4-Accounts - Registration logic

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,6 +6,7 @@
 
 <!-- Showcase -->
 <section id="showcase">
+    {% include 'partials/_alerts.html' %}
     <div class="container text-center">
         <div class="home-search p-5">
             <div class="overlay p-5">
