--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -25,6 +25,21 @@
             </ul>
 
             <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li {% if 'dashboard' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3"
+                    {% endif %}>
+                    <a class="nav-link" href="{% url 'dashboard' %}">
+                        Welcome {{ user.first_name }} | Dashboard</a>
+                </li>
+                <li class="nav-item mr-3">
+                    <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                        <i class="fas fa-sign-out-alt"></i> Logout </a>
+                    <form action="{% url 'logout' %}" method="POST" id='logout'>
+                        {% csrf_token %}
+                        <input type="hidden">
+                    </form>
+                </li>
+                {% else %}
                 <li {% if 'register' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3"
                     {% endif %}>
                     <a class="nav-link" href="{% url 'register' %}">
@@ -35,6 +50,7 @@
                     <a class="nav-link" href="{% url 'login' %}">
                         <i class="fas fa-sign-in-alt"></i> Login</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
