--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-    <title>SVN Real Estate</title>
+    <title>SVN Real Estate {% block title%}{% endblock title %} </title>
 </head>
 
 <body>
