--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% block title%} | Listing - {{ listing.title }} {% endblock title %}
 {% block content %}
 
 <section id="showcase-inner" class="py-5 text-white">
